[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dalux-build"
version = "1.1.5"
description = "Python client for the Dalux Build REST API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["dalux", "build", "api", "client", "construction"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "pydantic[email]",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/bruadam/Dalux-Build-API"
Repository = "https://github.com/bruadam/Dalux-Build-API"
Issues = "https://github.com/bruadam/Dalux-Build-API/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.25",
    "twine>=6.0",
    "ipykernel>=7.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dalux_build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
